# exercise

./: .clang-format  .gitignore  README.md
Analytis Group/PyMeasure 426/: GUI_functions2.py  GUI_functions_v3.py  Instrument_manager.py  Instrument_reference.txt  Instruments.txt  IntrumentsCommandsGUI_add.py  Janis_Instruments.py  Load_instruments.py  Measurement_Instruments.py  Oxford_3He_instr.py  PyMeasure_Main.py  Record_folder.txt  Save1.py  Teslatron_instr.py  lockin_fdependence.py  testitc.py
DSA/chapter1/: power2  power2.c
DSA/chapter2/: binsearch  binsearch.c
DSA/dsacpp-src/src/bubblesort/: CMakeLists.txt  bubble.cpp  bubble1A.cpp  bubble1B.cpp  bubble2.cpp  bubblesort  main.cpp
DSA/dsacpp-src/src/vector/: .x.swp  CMakeLists.txt  Vector_deduplicate.h  Vector_search.h  Vector_search_binary_A.h  Vector_search_binary_C.h  Vector_search_fibonaccian_A.h  git.diff  git.show  main.cpp  permute.h  vector  vector.h  vector_assignment.h  vector_bracket.h  vector_bubblesort_A.h  vector_bubblesort_B.h  vector_bubblesort_C.h  vector_constructor_by_copying.h  vector_deduplicate_1.h  vector_deduplicate_wrong_1.h  vector_expand.h  vector_find.h  vector_heapSort.h  vector_implementation.h  vector_insert.h  vector_merge.h  vector_mergeSort.h  vector_partition_DUP.h  vector_partition_DUP1.h  vector_partition_LGU.h  vector_partition_LUG.h  vector_partition_LUG1.h  vector_quickSort_iterative.h  vector_quickSort_recursive.h  vector_remove.h  vector_removeInterval.h  vector_search.h  vector_search_binary_B.h  vector_search_fibonaccian_B.h  (+9 more)
count/: README.md  copy_replaceblank.c  input1.txt
entab/: entab.c
longest_line/: longest_line.c
modify_line/: input1.txt  modify_line.c
print_line/: print_line.c
web_design/: blog.html  image.html  suan-v1.html  suan.html
word_length/: word_length.c
(+794 files in other folders)
